# open-storage

./: .gitignore  Cargo.toml  README.md  build_backend.sh  canister_ids.json  deploy-local.sh  deploy-prod-test.sh  deploy-prod.sh  dfx.json  generate-wasm.sh  notes.md  run-integration-tests.sh  upgrade-canister-local.sh  upgrade-canister-prod-test.sh  upgrade-canister-prod.sh
.github/workflows/: backend.yaml  candid.yaml  frontend.yaml
backend/canister_installer/: Cargo.toml
backend/canister_installer/src/: main.rs
backend/canister_upgrader/: Cargo.toml
backend/canister_upgrader/local-bin/: bucket_canister_impl-opt.wasm.xz  index_canister_impl-opt.wasm
backend/canister_upgrader/src/: main.rs
backend/canisters/bucket/api/: Cargo.toml  can.did
backend/canisters/bucket/api/src/: main.rs
backend/canisters/bucket/api/src/lifecycle/: init.rs
backend/canisters/bucket/api/src/queries/: blob_status.rs  c2c_reference_counts.rs  file_info.rs  file_status.rs  mod.rs
backend/canisters/bucket/api/src/updates/: c2c_remove_accessors.rs  c2c_sync_index.rs  delete_blob.rs  delete_file.rs  delete_files.rs  mod.rs  (+2 more)
backend/canisters/bucket/c2c_client/: Cargo.toml
backend/canisters/bucket/c2c_client/src/: lib.rs
backend/canisters/bucket/impl/: Cargo.toml
backend/canisters/bucket/impl/src/: guards.rs  lib.rs
backend/canisters/bucket/impl/src/lifecycle/: heartbeat.rs  init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
backend/canisters/bucket/impl/src/model/: blobs.rs  files.rs  index_sync_queue.rs  index_sync_state.rs  mod.rs  stable_blob_storage.rs  users.rs
backend/canisters/bucket/impl/src/queries/: blob_status.rs  c2c_reference_counts.rs  file_info.rs  file_status.rs  http_request.rs  mod.rs
backend/canisters/bucket/impl/src/updates/: c2c_add_users.rs  c2c_remove_accessors.rs  c2c_remove_users.rs  c2c_sync_index.rs  delete_blob.rs  delete_file.rs  delete_files.rs  forward_file.rs  mod.rs  upload_chunk.rs
backend/canisters/data_bucket/api/: Cargo.toml  can.did
backend/canisters/data_bucket/api/src/: main.rs
backend/canisters/data_bucket/impl/: Cargo.toml
backend/canisters/index/api/: Cargo.toml  can.did
backend/canisters/index/api/src/: lib.rs  main.rs
backend/canisters/index/api/src/lifecycle/: init.rs
backend/canisters/index/api/src/queries/: allocated_bucket.rs  allocated_bucket_v2.rs  can_forward.rs  mod.rs  reference_counts.rs  user.rs
backend/canisters/index/api/src/updates/: add_or_update_users.rs  add_service_principals.rs  add_user.rs  c2c_add_blob_reference.rs  c2c_remove_blob_reference.rs  c2c_sync_bucket.rs  delete_accessor.rs  mod.rs  update_bucket_canister_wasm.rs  update_user.rs  update_user_id.rs
backend/canisters/index/c2c_client/: Cargo.toml
backend/canisters/index/c2c_client/src/: lib.rs
backend/canisters/index/client/: Cargo.toml
backend/canisters/index/client/src/: lib.rs
backend/canisters/index/impl/: Cargo.toml
backend/canisters/index/impl/src/: guards.rs  lib.rs
backend/canisters/index/impl/src/lifecycle/: heartbeat.rs  init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
backend/canisters/index/impl/src/model/: blob_buckets.rs  blobs.rs  bucket_sync_state.rs  buckets.rs  files.rs  mod.rs
backend/canisters/index/impl/src/queries/: allocated_bucket.rs  can_forward.rs  http_request.rs  mod.rs  reference_counts.rs  user.rs
backend/canisters/index/impl/src/updates/: add_bucket_canister.rs  add_or_update_users.rs  add_service_principal.rs  add_service_principals.rs  add_user.rs  c2c_add_blob_reference.rs  c2c_notify_low_balance.rs  c2c_remove_blob_reference.rs  c2c_sync_bucket.rs  mod.rs  refresh_reference_counts.rs  remove_accessor.rs  remove_user.rs  set_bucket_full.rs  set_governance_principals.rs  update_bucket_canister_wasm.rs  update_user.rs  update_user_id.rs
backend/integration_tests/: Cargo.toml
backend/integration_tests/src/: allocation_exceeded_tests.rs  file_expiry_tests.rs  lib.rs  rng.rs  setup.rs  upload_file_tests.rs  wasms.rs
backend/integration_tests/src/client/: bucket.rs  index.rs  mod.rs
backend/libraries/candid_gen/: Cargo.toml
backend/libraries/candid_gen/src/: lib.rs
backend/libraries/canister_api_macros/: Cargo.toml
backend/libraries/canister_client/: Cargo.toml
backend/libraries/canister_client/src/: lib.rs  utils.rs
backend/libraries/canister_client/src/operations/: install_service_canisters.rs  mod.rs  upgrade_service_canisters.rs
backend/libraries/canister_client_macros/: Cargo.toml
backend/libraries/canister_client_macros/src/: lib.rs
backend/libraries/canister_logger/: Cargo.toml
backend/libraries/canister_logger/src/: lib.rs  panic_hook.rs
backend/libraries/cycles_utils/: Cargo.toml
backend/libraries/cycles_utils/src/: check_cycles_balance.rs  lib.rs
backend/libraries/env/: Cargo.toml
backend/libraries/env/src/: lib.rs
backend/libraries/http_request/: Cargo.toml
backend/libraries/http_request/src/: lib.rs  logs_handler.rs  metrics_handler.rs  router.rs
backend/libraries/serializer/: Cargo.toml
backend/libraries/serializer/src/: lib.rs
backend/libraries/types/: Cargo.toml  can.did
backend/libraries/types/src/: blob_reference.rs  blob_status.rs  canister_wasm.rs  file.rs  file_status.rs  hash.rs  lib.rs  version.rs
backend/libraries/utils/: Cargo.toml
backend/libraries/utils/src/: env.rs  file_id.rs  hasher.rs  lib.rs  memory.rs  time.rs
backend/libraries/utils/src/canister/: canisters_requiring_upgrade.rs  create.rs  delete.rs  mod.rs  stop.rs  upgrade.rs
backend/libraries/utils/src/cycles/: check_cycles_balance.rs
backend/libraries/utils/src/env/: canister.rs  test.rs
frontend/agent/: .eslintrc.json  .prettierignore  codegen.sh  package-lock.json  package.json  tsconfig.json
frontend/agent/src/: agent.ts
frontend/agent/src/domain/bucket/: index.ts
frontend/agent/src/domain/index/: index.ts
frontend/agent/src/services/bucket/: bucket.client.interface.ts  bucket.client.ts  mappers.ts
frontend/agent/src/services/index/: index.client.interface.ts  index.client.ts  mappers.ts
frontend/agent/src/utils/: hash.ts  rng.ts
(+9 files in other folders)
