[workspace]
members = [
    "backend/canister_installer",
    "backend/canister_upgrader",
    "backend/canisters/bucket/api",
    "backend/canisters/bucket/c2c_client",
    "backend/canisters/bucket/impl",
    "backend/canisters/index/api",
    "backend/canisters/index/c2c_client",
    "backend/canisters/index/client",
    "backend/canisters/index/impl",
    "backend/libraries/candid_gen",
    "backend/libraries/canister_api_macros",
    "backend/libraries/canister_client",
    "backend/libraries/canister_client_macros",
    "backend/libraries/canister_logger",
    "backend/libraries/http_request",
    "backend/libraries/serializer",
    "backend/libraries/types",
    "backend/libraries/utils"
]

[workspace.dependencies]
arrayref = "0.3.6"
candid = "0.7.16"
canister_state_macros = { git = "https://github.com/open-ic/ic-utils", rev = "b06d3b984e39fa3a23828521934ef0370b720b18" }
clap = "=3.0.0-rc.4"
dirs = "4.0.0"
futures = "0.3.21"
garcon = "0.2.3"
generic-array = "0.14.5"
hex = "0.4.3"
ic-agent = "0.20.0"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
ic-utils = "0.20.0"
itertools = "0.10.3"
num-traits = "0.2.15"
proc-macro2 = "1.0.39"
quote = "1.0.18"
rand = "0.7.3"
rmp-serde = "1.1.0"
serde = "1.0.137"
serde_bytes = "0.11.6"
serde_json = "1.0.81"
sha3 = "0.10.1"
syn = "1.0.96"
tokio = { version = "1.10.0" }
tracing = "0.1.35"
tracing-attributes = "0.1.21"
tracing-subscriber = "0.3.11"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[patch.crates-io]
ic-cdk = { git = "https://github.com/hpeebles/cdk-rs", rev = "b651609e1ef00f27d8693d760dfc0dc713059bb9" }
ic-cdk-macros = { git = "https://github.com/hpeebles/cdk-rs", rev = "b651609e1ef00f27d8693d760dfc0dc713059bb9" }