[workspace]
members = [
    "backend/canister_installer",
    "backend/canister_upgrader",
    "backend/canisters/bucket/api",
    "backend/canisters/bucket/c2c_client",
    "backend/canisters/bucket/impl",
    "backend/canisters/index/api",
    "backend/canisters/index/c2c_client",
    "backend/canisters/index/client",
    "backend/canisters/index/impl",
    "backend/libraries/candid_gen",
    "backend/libraries/canister_api_macros",
    "backend/libraries/canister_client",
    "backend/libraries/canister_client_macros",
    "backend/libraries/canister_logger",
    "backend/libraries/http_request",
    "backend/libraries/serializer",
    "backend/libraries/types",
    "backend/libraries/utils"
]

[workspace.dependencies]
arrayref = "0.3.6"
candid = "0.8.3"
canister_state_macros = { git = "https://github.com/open-ic/ic-utils", rev = "b06d3b984e39fa3a23828521934ef0370b720b18" }
clap = "3.2.22"
dirs = "4.0.0"
futures = "0.3.24"
garcon = "0.2.3"
generic-array = "0.14.6"
getrandom = "0.2.8"
hex = "0.4.3"
ic-agent = "0.22.0"
ic-cdk = "0.6.1"
ic-cdk-macros = "0.6.1"
ic-stable-structures = { git = "https://github.com/dfinity/stable-structures", rev = "ed68e459193a83a02f6914b011f4354d513cb6cd" }
ic-utils = "0.22.0"
itertools = "0.10.5"
num-traits = "0.2.15"
proc-macro2 = "1.0.47"
quote = "1.0.21"
rand = "0.8.5"
rmp-serde = "1.1.1"
serde = "1.0.145"
serde_bytes = "0.11.7"
serde_json = "1.0.86"
sha3 = "0.10.5"
syn = "1.0.102"
tokio = "1.21.2"
tracing = "0.1.37"
tracing-attributes = "0.1.23"
tracing-subscriber = "0.3.16"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[patch.crates-io]
ic-cdk = { git = "https://github.com/hpeebles/cdk-rs", rev = "3849c7bede6db8c5d6c310aaa1b2dcada34aed62" }
ic-cdk-macros = { git = "https://github.com/hpeebles/cdk-rs", rev = "3849c7bede6db8c5d6c310aaa1b2dcada34aed62" }