[workspace]
members = [
    "backend/canister_installer",
    "backend/canister_upgrader",
    "backend/canisters/bucket/api",
    "backend/canisters/bucket/c2c_client",
    "backend/canisters/bucket/impl",
    "backend/canisters/index/api",
    "backend/canisters/index/c2c_client",
    "backend/canisters/index/client",
    "backend/canisters/index/impl",
    "backend/integration_tests",
    "backend/libraries/candid_gen",
    "backend/libraries/canister_api_macros",
    "backend/libraries/canister_client",
    "backend/libraries/canister_client_macros",
    "backend/libraries/http_request",
    "backend/libraries/types",
    "backend/libraries/utils"
]

[workspace.dependencies]
arrayref = "0.3.6"
candid = "0.8.4"
canister_logger = { git = "https://github.com/open-ic/ic-utils", rev = "4bcf677f878b6cd9d2a818c5fc1c2f89ad110f8c" }
canister_state_macros = { git = "https://github.com/open-ic/ic-utils", rev = "4bcf677f878b6cd9d2a818c5fc1c2f89ad110f8c" }
clap = "3.2.22"
cycles_dispenser_client = { git = "https://github.com/open-ic/cycles-dispenser", rev = "fedf3fb1f407000aae1390d46769ae9cea0a8b49" }
dirs = "4.0.0"
futures = "0.3.24"
generic-array = "0.14.6"
getrandom = "0.2.8"
hex = "0.4.3"
ic-agent = "0.23.0"
ic-cdk = "0.7.0"
ic-cdk-macros = "0.6.8"
ic-cdk-timers = "0.1.0"
ic-stable-structures = "0.5.0"
ic-state-machine-tests = { git = "https://github.com/dfinity/ic", rev = "7445081734e6d896d090295967d50710975c4f25" }
ic-utils = "0.23.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
num-traits = "0.2.15"
proc-macro2 = "1.0.47"
quote = "1.0.21"
rand = "0.8.5"
rmp-serde = "1.1.1"
serde = "1.0.145"
serde_bytes = "0.11.7"
serde_json = "1.0.86"
sha3 = "0.10.5"
serializer = { git = "https://github.com/open-ic/ic-utils", rev = "4bcf677f878b6cd9d2a818c5fc1c2f89ad110f8c" }
syn = "1.0.102"
tokio = "1.21.2"
tracing = "0.1.37"
tracing-attributes = "0.1.23"
tracing-subscriber = "0.3.16"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
