[package]
name = "canister_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canister_client = { path = "../libraries/canister_client" }
clap = { version = "=3.0.0-rc.4", features = ["derive"] }
tokio = { version = "1.10.0", features = ["full"] }
types = { path = "../libraries/types" }
