[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bucket_canister = { path = "../canisters/bucket/api" }
candid = { workspace = true }
ic-state-machine-tests = { workspace = true }
index_canister = { path = "../canisters/index/api" }
itertools = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
types = { path = "../libraries/types" }
utils = { path = "../libraries/utils" }
