[package]
name = "canister_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bucket_canister = { path = "../../canisters/bucket/api" }
candid = { workspace = true }
canister_client_macros = { path = "../canister_client_macros" }
dirs = { workspace = true }
ic-agent = { workspace = true }
ic-utils = { workspace = true }
index_canister = { path = "../../canisters/index/api" }
index_canister_client = { path = "../../canisters/index/client" }
serde = { workspace = true }
types = { path = "../types" }
