[package]
name = "canister_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.7"
ic-cdk = "0.5.0"
serde = "1.0.126"
tracing = "0.1.29"
tracing-attributes = "0.1.11"
tracing-subscriber = "0.2.25"
types = { path = "../types" }
