[package]
name = "canister_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.16"
ic-cdk = "0.5.2"
serde = "1.0.137"
tracing = "0.1.35"
tracing-attributes = "0.1.21"
tracing-subscriber = { version = "0.3.11", features = ["json"] }
types = { path = "../types" }
