[package]
name = "cycles_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.7"
canister_client_macros = { path = "../canister_client_macros" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "bd3b73e075aea1cc81b23b38ccfb138ca4ab17ab" }
ic-cdk = "0.5.0"
ic-ic00-types = { git = "https://github.com/dfinity/ic", rev = "bd3b73e075aea1cc81b23b38ccfb138ca4ab17ab" }
serde = "1.0.126"
tracing = "0.1.29"
types = { path = "../types" }
utils = { path = "../utils" }