[package]
name = "http_request"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.7"
canister_logger = { path = "../canister_logger" }
serde = "1.0.126"
serde_bytes = "0.11.5"
serde_json = "1.0.64"
types = { path = "../types" }
