[package]
name = "http_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
canister_logger = { path = "../canister_logger" }
serde = "1.0.137"
serde_bytes = "0.11.6"
serde_json = "1.0.81"
types = { path = "../types" }
