[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
hex = "0.4.3"
lzma-rs = { version = "0.2.0", optional = true }
serde = "1.0.137"
serde_bytes = "0.11.6"

[features]
compression = ["lzma-rs"]
