[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.7"
canister_client_macros = { path = "../canister_client_macros" }
generic-array = "0.14.4"
ic-cdk = "0.5.0"
rand = "0.7.3"
serde = "1.0.126"
serde_bytes = "0.11.5"
sha3 = "0.9.1"
tracing = "0.1.29"
types = { path = "../types" }