[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
canister_client_macros = { path = "../canister_client_macros" }
generic-array = { workspace = true }
ic-cdk = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha3 = { workspace = true }
tracing = { workspace = true }
types = { path = "../types" }