[package]
name = "bucket_canister_c2c_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bucket_canister = { path = "../api" }
canister_client_macros = { path = "../../../libraries/canister_client_macros" }
ic-cdk = { workspace = true }
tracing = { workspace = true }
types = { path = "../../../libraries/types" }
