[package]
name = "bucket_canister_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bucket_canister = { path = "../api" }
candid = "0.7.14"
canister_api_macros = { path = "../../../libraries/canister_api_macros" }
canister_logger = { path = "../../../libraries/canister_logger" }
canister_state_macros = { git = "https://github.com/open-ic/ic-utils", rev = "b06d3b984e39fa3a23828521934ef0370b720b18" }
http_request = { path = "../../../libraries/http_request" }
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
index_canister = { path = "../../index/api" }
index_canister_c2c_client = { path = "../../index/c2c_client" }
num-traits = "0.2.15"
serde = "1.0.137"
serde_bytes = "0.11.6"
serializer = { path = "../../../libraries/serializer" }
tracing = "0.1.35"
types = { path = "../../../libraries/types" }
utils = { path = "../../../libraries/utils" }
