[package]
name = "bucket_canister_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bucket_canister = { path = "../api" }
candid = { workspace = true }
canister_api_macros = { path = "../../../libraries/canister_api_macros" }
canister_logger = { path = "../../../libraries/canister_logger" }
canister_state_macros = { workspace = true }
http_request = { path = "../../../libraries/http_request" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
index_canister = { path = "../../index/api" }
index_canister_c2c_client = { path = "../../index/c2c_client" }
num-traits = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serializer = { path = "../../../libraries/serializer" }
tracing = { workspace = true }
types = { path = "../../../libraries/types" }
utils = { path = "../../../libraries/utils" }
