[package]
name = "index_canister"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.7"
candid_gen = { path = "../../../libraries/candid_gen" }
serde = "1.0.126"
serde_bytes = "0.11.5"
types = { path = "../../../libraries/types" }
