[package]
name = "index_canister_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
canister_client_macros = { path = "../../../libraries/canister_client_macros", features = ["ingress"] }
index_canister = { path = "../api" }
ic-agent = "0.17.0"
types = { path = "../../../libraries/types" }
