[package]
name = "index_canister_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
arrayref = "0.3.6"
candid = "0.7.7"
canister_api_macros = { path = "../../../libraries/canister_api_macros" }
canister_logger = { path = "../../../libraries/canister_logger" }
canister_state_macros = { path = "../../../libraries/canister_state_macros" }
bucket_canister = { path = "../../bucket/api" }
bucket_canister_c2c_client = { path = "../../bucket/c2c_client" }
futures = "0.3.18"
http_request = { path = "../../../libraries/http_request" }
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
index_canister = { path = "../api" }
serde = "1.0.126"
serializer = { path = "../../../libraries/serializer" }
tracing = "0.1.29"
types = { path = "../../../libraries/types", features = ["compression"] }
utils = { path = "../../../libraries/utils" }
