[package]
name = "index_canister_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
arrayref = "0.3.6"
candid = "0.7.14"
canister_api_macros = { path = "../../../libraries/canister_api_macros" }
canister_logger = { path = "../../../libraries/canister_logger" }
canister_state_macros = { git = "https://github.com/open-ic/ic-utils", rev = "b06d3b984e39fa3a23828521934ef0370b720b18" }
bucket_canister = { path = "../../bucket/api" }
bucket_canister_c2c_client = { path = "../../bucket/c2c_client" }
futures = "0.3.21"
http_request = { path = "../../../libraries/http_request" }
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
index_canister = { path = "../api" }
serde = "1.0.137"
serializer = { path = "../../../libraries/serializer" }
tracing = "0.1.35"
types = { path = "../../../libraries/types", features = ["compression"] }
utils = { path = "../../../libraries/utils" }
