[package]
name = "index_canister_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
arrayref = { workspace = true }
candid = { workspace = true }
canister_api_macros = { path = "../../../libraries/canister_api_macros" }
canister_logger = { workspace = true }
canister_state_macros = { git = "https://github.com/open-ic/ic-utils", rev = "b06d3b984e39fa3a23828521934ef0370b720b18" }
cycles_dispenser_client = { git = "https://github.com/open-ic/cycles-dispenser", rev = "c65b84be6663b82ff1387523f89aa7fa98b46eb7" }
bucket_canister = { path = "../../bucket/api" }
bucket_canister_c2c_client = { path = "../../bucket/c2c_client" }
futures = { workspace = true }
http_request = { path = "../../../libraries/http_request" }
ic-cdk = { workspace = true, features = ["timers"] }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
index_canister = { path = "../api" }
serde = { workspace = true }
serializer = { workspace = true }
tracing = { workspace = true }
types = { path = "../../../libraries/types" }
utils = { path = "../../../libraries/utils" }
